# driver_leapify

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  driver_leap.sln  test.sh
.github/workflows/: build.yml
dev-resources/: install.nsi
driver_leap/: dllmain.cpp  driver_leap.vcxproj  driver_leap.vcxproj.filters  stdafx.h
driver_leap/Controller/: CJoyconInput.cpp  CJoyconInput.h  CLeapIndexController.cpp
driver_leap/Core/: CServerDriver.cpp  CServerDriver.h
driver_leap/Devices/Controller/: CLeapIndexController.cpp
driver_leap/Leap/: CLeapFrame.h  CLeapHand.cpp  CLeapHand.h  CLeapPoller.cpp  CLeapPoller.h
scripts/: test.sh
src/: DeviceController.cpp  DeviceController.hpp  GestureInput.cpp  GestureInput.hpp  InterfaceHook.cpp  InterfaceHook.hpp  LeapConnection.cpp  LeapConnection.hpp  Math.hpp  SimpleKalmanFilter.cpp  Singleton.hpp  StateManager.hpp  TrackedController.cpp  TrackedController.hpp  TrackedDeviceProvider.cpp  TrackedDeviceProvider.hpp  TrackedObject.cpp  TrackedObject.hpp  main.cpp
src/controller/: CControllerButton.cpp  CControllerButton.h  CControllerInput.cpp  CControllerInput.h  CJoyconInput.cpp  CJoyconInput.h  CLeapIndexController.cpp  CLeapIndexController.h  ControllerButton.cpp  ControllerButton.h  ControllerInput.cpp  ControllerInput.h  LeapController.cpp  LeapController.h
src/core/: CServerDriver.cpp  CServerDriver.h  LeapConnection.cpp  LeapConnection.hpp  ServerDriver.cpp  ServerDriver.h  StateManager.hpp
src/driver/: TrackedController.cpp  TrackedController.hpp  TrackedDeviceProvider.cpp  TrackedDeviceProvider.hpp  TrackedObject.cpp  TrackedObject.hpp
src/hook/: HookManager.cpp  HookManager.hpp  __InterfaceHook.cpp
src/hook/hooks/: IVRDriverInput_003.hpp  IVRServerDriverHost_006.hpp
src/leap/: CLeapFrame.cpp  CLeapHand.cpp  CLeapHand.h  CLeapPoller.cpp  LeapFrame.cpp  LeapFrame.h  LeapHand.cpp  LeapHand.h  LeapPoller.cpp  LeapPoller.h
src/util/: HashString.hpp  LowPassFilter.hpp  SimpleKalmanFilter.cpp  SimpleKalmanFilter.hpp
src/utils/: Utils.cpp  Utils.h
